# redox_engine

./: .git_commit_msg.txt  .gitignore  CINEMATIC_AUDIO_COMPLETE.md  CINEMATIC_AUDIO_SYSTEM.md  CLUSTERING_COMPLETE_SUMMARY.md  CLUSTERING_PHASE1_SUMMARY.md  CLUSTERING_PHASE2_4_COMPLETE.md  CLUSTERING_QUICK_REFERENCE.md  CLUSTERING_README.md  Cargo.toml  README.md  check_output.txt  report.json]
crates/redox_asset/: Cargo.toml
crates/redox_asset/src/: error.rs  event.rs  handle.rs  hot_reload.rs  lib.rs  manager.rs  storage.rs
crates/redox_asset/src/loader/: image_loader.rs  mod.rs
crates/redox_audio/: Cargo.toml
crates/redox_audio/src/: asset_types.rs  components.rs  context.rs  debug.rs  lib.rs  loader.rs  spatial.rs  systems.rs
crates/redox_core/: Cargo.toml
crates/redox_core/examples/: benchmark.rs  crystal_forest.rs  dino_game.rs  dino_runner.rs  falling_balls.rs  full_demo.rs  horror_demo.rs  simple_game.rs
crates/redox_core/src/: app.rs  config.rs  dispatcher.rs  lib.rs  time.rs  window.rs
crates/redox_ecs/: Cargo.toml
crates/redox_ecs/src/: ecs.rs  entity.rs  system.rs  world.rs
crates/redox_ecs/src/archetype/: mod.rs
crates/redox_ecs/src/query/: filter.rs  iter.rs  mod.rs  par_iter.rs
crates/redox_ecs/tests/: ecs_tests.rs
crates/redox_input/: Cargo.toml
crates/redox_input/src/: action.rs  keyboard.rs  lib.rs  mouse.rs  state.rs
crates/redox_math/: Cargo.toml
crates/redox_math/src/: bounds.rs  frustum.rs  math.rs  matrix.rs  quat.rs  transform.rs  vector.rs
crates/redox_physics/: Cargo.toml
crates/redox_physics/src/: components.rs  context.rs  lib.rs  physics.rs  raycast.rs  sync.rs  utils.rs
crates/redox_render/: Cargo.toml
crates/redox_render/examples/: basic_cube.rs
crates/redox_render/src/: asset_types.rs  camera.rs  cluster_manager.rs  clustering.rs  context.rs  lib.rs  light.rs  material.rs  systems.rs
crates/redox_render/src/mesh/: loader.rs  mod.rs  primitive.rs
crates/redox_render/src/pass/: debug_lines.rs  forward.rs  mod.rs  normal.rs  pbr.rs  shadow.rs  taa.rs  velocity.rs
crates/redox_render/src/post/: mod.rs  ssao.rs  tone_mapping.rs
crates/redox_render/src/resource/: ibl.rs  mod.rs  texture.rs
crates/redox_render/src/shader/: ibl.wgsl  manager.rs
crates/redox_render/src/shadow/: cache.rs  csm.rs  depth_pass.rs  local_light.rs  mod.rs  shadow_atlas.rs  smrt.rs  visibility.rs
crates/redox_render/src/virtual_geometry/: asset_pipeline.rs  culling.rs  indirect.rs  lod.rs  meshlet.rs  mod.rs  runtime.rs
crates/redox_ui/: Cargo.toml
crates/redox_ui/src/: context.rs  lib.rs
crates/redox_ui/src/debug/: audio.rs  inspector.rs  mod.rs  stats.rs
docs/: CLUSTERED_RENDERING_IMPL.md  TECHNICAL_OVERVIEW.md
