[workspace]
resolver = "2"
members = [
    "crates/redox_math",
    "crates/redox_ecs",
    "crates/redox_render",
    "crates/redox_physics",
    "crates/redox_core",
    "crates/redox_input",
    "crates/redox_asset",
    "crates/redox_audio",
    "crates/redox_ui",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[workspace.dependencies]
glam = "0.27"
winit = "0.29"
wgpu = "0.20"
rapier3d = "0.18"
kira = "0.8"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
smallvec = "1.11"
crossbeam-queue = "0.3"
image = "0.24"
gltf = "1.4"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
egui_plot = "0.28"
thiserror = "1.0"
notify = "6.1"
flume = "0.11"
