[package]
name = "redox_audio"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
redox_math = { path = "../redox_math" }
redox_ecs = { path = "../redox_ecs" }
redox_asset = { path = "../redox_asset" }
redox_physics = { path = "../redox_physics" }
kira = { workspace = true }
log = { workspace = true }

[dev-dependencies]
