[package]
name = "redox_core"
version = "0.1.0"
edition = "2024"

[dependencies]
redox_math = { path = "../redox_math" }
redox_ecs = { path = "../redox_ecs" }
redox_render = { path = "../redox_render" }
redox_input = { path = "../redox_input" }
redox_asset = { path = "../redox_asset" }
redox_audio = { path = "../redox_audio" }
redox_ui = { path = "../redox_ui" }

winit = { workspace = true }
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
bytemuck = "1.14"
wgpu = { workspace = true }

[dev-dependencies]
# Для примеров: физика, UI, рандом
redox_physics = { path = "../redox_physics" }
rapier3d = "0.18"
pollster = "0.3"
egui-wgpu = { workspace = true }
egui = { workspace = true }
rand = "0.8"
# Для benchmark: замер памяти (RSS)
memory-stats = "1.1"
